kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grill-stats
  namespace: services
spec:
  selector:
    app: grill-stats
  ports:
  - port: 80
    targetPort: 5000
    name: http
  type: ClusterIP
